# ALPSCore

python/: CMakeLists.txt
python/include/alps/: python.hpp
python/include/alps/params/: dict_to_params.hpp
python/src/: dict_to_params.cpp
python/test/: CMakeLists.txt  dict_to_params.cpp
